--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learning Purposes",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -48,5 +49,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
     "prettier": "^3.3.3"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
